--- a/RADIO.html
+++ b/RADIO.html
@@ -55,6 +55,16 @@ $(document).scroll(function(){
         });
         </script>
 
+       <!-- アクセス解析 -->>
+       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110480601-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'UA-110480601-1');
+       </script>
+
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cookie|Indie+Flower|Monoton|Raleway|Kokoro" rel="stylesheet"> 
@@ -95,9 +105,11 @@ $(document).scroll(function(){
         </h1>
 	</div>
 
+<br>
 <div class="movie-wrap">
        <iframe width="640" height="340" src="https://www.youtube.com/embed/live_stream?channel=UCYWslm1OLQiT4auWAmbXuiQ&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+</br>
 
          <div class="RADblock"> 
 
