--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 	<!-- IE HTML 修復 -->
        <script src="./js/html5shiv.js"></script>
 
+       <!-- アクセス解析 -->>
+       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110480601-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'UA-110480601-1');
+       </script>
+
+
 </head>
 <body>
         　　　　　　　　
