--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
 	<script src="./js/modernizr-2.6.2.min.js">
         </script>
 
-	<script src="./js/swiper.js">
-        </script>
-
 	<!-- IE HTML 修復 -->
        <script src="./js/html5shiv.js"></script>
 
@@ -50,7 +47,6 @@
 	<link href="./css/html5doctor.css" rel="stylesheet" type="text/css" media="screen,print">
         <link href="./css/footer.css" rel="stylesheet">
         <link href="./css/neon.css" rel="stylesheet" type="text/css">
-        <link href="./css/swiper.css" rel="stylesheet" type="text/css">
         <link href="./css/menu.css" rel="stylesheet" type="text/css">
         <link href="./css/style.css" rel="stylesheet">
         <link href="./css/jquery.sectionmenu.css" rel="stylesheet">　　　　　　　　
@@ -177,39 +173,32 @@
         </h1>
 	</div>
 
- <div class="swiper-container">
-    <div class="swiper-wrapper">
+         <div class="SAMblock"> 
+         <br>
+         <p class="SAM-img">
+         <img src="./img/oooon.png" width="200px"></p></br>
 
-      <div class="swiper-slide">
-      <span style="">
-      <img src="./img/kore.jpg" width="300" height="300" alt="">
-      <span style="font-family : 'Cookie'; font-size: 18pt"><h1><a href="https://www.youtube.com/channel/UCYWslm1OLQiT4auWAmbXuiQ?sub_confirmation=1">Samo</a></h1></span>
-　　　<span style="font-family : 'ＭＳ Ｐ明朝'"><p>クリエイター。１５歳。</p><br><p>明確な目的も持たず</p><p>更なる技術を求め続ける変態</p>
-      </br>
-      </span>
-      </div>
+         <div class="threed">
+        <br><font size="7" face="ＭＳ 明朝">さも</font></br>
+　　　　 </div>
 
-      <div class="swiper-slide">
-      <span style="">
-      <img src="./img/magic.jpeg" width="300" height="300" alt="">
-      <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://www.youtube.com/playlist?list=PL2-kedNFod8p-b9Hc5Iyky4Wa-sf-DWRb">Samo(マジック）</a></h1>
-　　　<p>趣味マジシャン。</p><br><p>ビジュアルエフェクト大好き</p><p>クローズアップがメイン</p>
-      </br>
-      </span>
-      </div>
-
-      <div class="swiper-slide">
-      <span style="">
-      <img src="./img/SamoRemix.jpg" width="300" height="300" alt="">
-      <span style="font-family : 'ＭＳ Ｐ明朝'"><h1><a href="https://soundcloud.com/fsfdawhd1yw3">SamoRemix</a></h1>
-　　　<p>DTM大好き人間</p><br><p>Arp系の音源がお気に入り</p><p>Remix作品をメインとしているが、作曲もしている</p>
-      </br>
-      </span>
-      </div>
-
-    <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
-</div>
+　　　　<div class="SAM-h1">
+        <font size="4.5">
+        <p>　作りたいものを作り続ける学生クリエイター</p>
+        <p>　若さだけを武器に、現在絶賛迷走中(・ω・`)</p>
+        <br>　所有スキル</br>
+　　　　<p>　・クローズアップマジック</p>
+　　　　<p>　・DTM</p>
+　　　　<p>　・Remix</p>
+　　　　<p>　・作詞</p>
+　　　　<p>　・作曲</p>
+　　　　<p>　・西洋占星術</p>
+　　　　<p>　・VFX</p>
+　　　　<p>　・C#,Python,HTML,Ruby etc....</p>
+        </font>
+　　　　　</div>
+　　　　  </div>
+　　　　  </div>
 
 	<div class="neon">
         <h1>
@@ -217,6 +206,7 @@
             <span id="work">Work</span>
         </h1>
 	</div>
+
            <div class="carousel"
             data-flickity='{ "autoPlay": 1500, "imagesLoaded": true, "percentPosition": false, "wrapAround": true}'>
             <img src="./img/SAMOSMAGIC.png" alt="Samo'sMAGIC" />
